# church-app

./: AGENTS.md  PLANS.md  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  product-decisions.md  project-overview.md  review-checklist.md  security-and-data.md  sqlcipher-windows-feasibility.md  verification.md
src/: App.module.css  App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: installation_state.rs  lib.rs  main.rs  sqlcipher_windows_feasibility.rs  storage_foundation.rs
src/components/: HealthPanel.module.css  HealthPanel.tsx
src/lib/: health.ts
